# xbmcremote

./: AUTHORS  Makefile.am  README  README.md  configure.ac
extra/: rpcnotes.txt
src/: Makefile.am  browse-cell-renderer.cc  browse-cell-renderer.h  browse-model.cc  browse-model.h  browse-movies-cell-renderer.cc  browse-movies-cell-renderer.h  browse-movies-model.cc  browse-movies-model.h  client.cc  client.h  hig.h  main-window.cc  main-window.h  main.cc  playlist-model.cc  playlist-model.h  preferences-dialog.cc  preferences-dialog.h  requests.cc  requests.h  uk.org.eth0.xbmcremote.gschema.xml  util.cc  util.h  xvfs-cache-object.cc  xvfs-cache-object.h  xvfs-cache.cc  xvfs-cache.h
ui/: Makefile.am  browser.glade  image.glade  player.glade  playlist.glade  preferences-connection.glade  preferences.glade  remote.glade
